--- a/aarch64/config/honey-badger-os.conf
+++ b/aarch64/config/honey-badger-os.conf
@@ -26,14 +26,14 @@ DESKTOP_ENVIRONMENT="xfce4"
 DISPLAY_MANAGER="lightdm"
 
 # Build directories
-BUILD_DIR="/home/james/Honey_Badger_OS/build"
-CONFIG_DIR="/home/james/Honey_Badger_OS/config"
-SCRIPTS_DIR="/home/james/Honey_Badger_OS/scripts"
-LIVE_BUILD_DIR="/home/james/Honey_Badger_OS/live-build"
+BUILD_DIR="/tmp/honey-badger-build"
+CONFIG_DIR="$(dirname "$(readlink -f "${BASH_SOURCE[0]}")")"
+SCRIPTS_DIR="$(dirname "$CONFIG_DIR")/scripts"
+LIVE_BUILD_DIR="$BUILD_DIR/live-build"
 
 # Output
 ISO_NAME="honey-badger-os-${DISTRO_VERSION}-${ARCH}.iso"
-ISO_OUTPUT_DIR="${BUILD_DIR}/iso"
+ISO_OUTPUT_DIR="$(dirname "$(dirname "$CONFIG_DIR")")/ISOs"
 
 # Live system user
 LIVE_USER="honeybadger"
